# MEC

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPER.md  Queries.MD  README.md  SECURITY.md  getAllIssues.gql  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js
.github/: SECURITY.md  issue-branch.yml
.github/workflows/: CI-CD.yml  IntegrationTests.yml  Tests.yml  UnitTests.yml  codeql-analysis.yml  createBranch.yml  main.yml
backend/: database.py  main.py  models.py  requirements.txt
src/: dev-docker-compose.yml  docker-compose.yml  local-docker-compose.yml  main.js  package.json
src/backend/: .env.example  Dockerfile  database.py  main.py  meetings.db  models.py  pyproject.toml  requirements.txt
src/backend/alembic/: env.py
src/backend/alembic/versions/: 1d3daaeebc36_first_migration.py
src/backend/api/: database.py  main.py  models.py
src/backend/mec/: database.py  main.py  models.py  schemas.py
src/backend/mec/routes/meetings/: crud.py  routes.py
src/backend/tests/: .coveragerc  conftest.py  test_connection.py  test_meeting.py  test_test.py
src/components/: Alert.vue  App.vue  DateAgo.vue  LoginForm.vue  MemberCard.vue  RedBattery.vue
src/frontend/: .env.example  .env.fastAPI  .eslintrc.json  CHANGELOG.md  Dockerfile  cypress.json  index.html  jsconfig.json  package.json  package_old.json  postcss.config.js  tailwind-custom.config.js  tailwind.config.js  tsconfig.json
src/frontend/src/: App.vue  (+2 more)
src/router/: index.js
src/store/: index.js
src/views/: About.vue  CostCounter.vue  Home.vue  Table.vue
(+34 files in other folders)
